--- a/contact.html
+++ b/contact.html
@@ -39,14 +39,14 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<div class="page-container">
+<div class="page-container-contact">
     
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo Agence La Panthère" height="40" /></a>
+				<a class="navbar-brand" href="agencelapanthère.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo Agence La Panthère" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
