--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 		
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="accueil.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo Agence La Panthère"></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo Agence La Panthère"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -46,7 +46,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="accueil.html">Accueil</a>
+						<a href="index.html">Accueil</a>
 					</li><!-- Supression d'un <li> en trop -->
 					<li>
 						<a href="contact.html">Contact</a>
