--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="fr">
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EH8SJGEPHS"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-EH8SJGEPHS');
+	</script>
 	
     <meta charset="utf-8"> <!-- Modification des balises meta -->
 	<meta name="title" content="Agence Digitale Lyon - La panthère">
