--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Vous avez un projet de création de site internet, et en plus vous habitez sur Lyon ? Notre agence digitale de web design et développement est faite pour vous ! Rejoignez vite l'aventure"> <!-- Remplissage de la balise description A FAIRE -->
 	<meta name="robots" content="index, follow"> <!-- Création de la balise meta name robots -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/webp" href="favicon.webp">
+    <link rel="shortcut icon" type="image/webp" href="favicon.webp">  <!-- Format Webp et ALT -->
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
@@ -73,7 +73,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo Agence La Panthère"> <!-- Suppression des slashs -->
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo Agence La Panthère"> <!-- Suppression des slashs - Format Webp et ALT -->
 				<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a> 
@@ -163,7 +163,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="Journaux de couleurs" class="img-responsive portfolio-thumb"></a> <!-- Suppression des slashs -->
+				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="Journaux de couleurs" class="img-responsive portfolio-thumb"></a> <!-- Suppression des slashs - Format Webp et ALT -->
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -172,7 +172,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Photographe entrain de prendre une photo"></a> <!-- Suppression des slashs -->
+				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Photographe entrain de prendre une photo"></a> <!-- Suppression des slashs - Format Webp et ALT -->
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -183,7 +183,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Matériels voyages"></a> <!-- Suppression des slashs -->
+				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Matériels voyages"></a> <!-- Suppression des slashs - Format Webp et ALT -->
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -192,7 +192,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Bureau de travail web développeur"></a> <!-- Suppression des slashs -->
+				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Bureau de travail web développeur"></a> <!-- Suppression des slashs - Format Webp et ALT -->
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
